[package]
name = "renigma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
bimap = "0.6.3"
actix-web = "4"
actix-files = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
